--- a/new/makefile
+++ b/new/makefile
@@ -1,9 +1,9 @@
 CC=gcc
 LIBS=-lfl
 CFLAGS = -I.
-DEPS=linked_list.c ast.c utils.c
-BISON_DEPS=ast.o linked_list.o utils.o
-OBJ = main.o ast.o linked_list.o lex.yy.o parser.tab.o utils.o
+DEPS=lexeme.c linked_list.c ast.c utils.c
+BISON_DEPS= ast.o linked_list.o
+OBJ = main.o utils.o ast.o linked_list.o lex.yy.o parser.tab.o
 
 etapa3: $(OBJ)
 	$(CC) -o $@ $^ $(LIBS)
@@ -18,7 +18,7 @@ parser.tab.o: parser.tab.c parser.tab.h
 parser.tab.c, parser.tab.h: parser.y
 	bison -d parser.y -Wcounterexamples 2> counterexamples.txt
 
-lex.yy.c: scanner.l parser.tab.h
+lex.yy.c: scanner.l parser.tab.h parser.tab.o
 	flex scanner.l
 
 .PHONY: clean
